# controller/login.js
@@ -1,11 +1,12 @@
 const { ObjectId } = require('mongodb');
 const mongodb = require('../db/connect');
 const objectId = require('mongodb').ObjectId;
+const readline = require('readline');
 
 const loginUser = async (req, res, next) => {
 
-    username = process.env.LOGIN_USERNAME
-    password = process.env.LOGIN_PASSWORD
+    const username = "thanos";
+    const password = "6stones"
 
    const login = await mongodb.getDb().db('Films').collection('user').find({ username: username, password: password });
    
@@ -13,10 +14,13 @@ const loginUser = async (req, res, next) => {
     if (list.length == 0) {
         res.status(507).json("unable to login :(")
     }
-    res.setHeader('Content-Type', 'application/json');
-    res.status(201).json("You are logged in");
+    console.log(list)
+    // res.setHeader('Content-Type', 'application/json');
+    // res.status(201).json("You are logged in");
+    res.redirect(`/success/api-docs`);
  });
 
+ 
 }
 
 module.exports = {loginUser}
